--- a/booking-ui/package.json
+++ b/booking-ui/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
     "@tailwindcss/postcss": "^4.1.11",
+    "axios": "^1.10.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
