--- a/booking-ui/package.json
+++ b/booking-ui/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "axios": "^1.10.0",
     "next": "^15.0.0",
+    "next-intl": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
