--- a/booking-be/apigateway/src/main/resources/application.properties
+++ b/booking-be/apigateway/src/main/resources/application.properties
@@ -9,6 +9,8 @@ springdoc.swagger-ui.urls[0].name=User Service
 springdoc.swagger-ui.urls[0].url=/docs/userservice/v3/api-docs
 springdoc.swagger-ui.urls[1].name=Auth Service
 springdoc.swagger-ui.urls[1].url=/docs/authservice/v3/api-docs
+springdoc.swagger-ui.urls[2].name=Hotel Service
+springdoc.swagger-ui.urls[2].url=/docs/hotelservice/v3/api-docs
 
 security.excluded.urls= /swagger-ui.html, /swagger-ui/**, /docs/**, /v3/api-docs/**, /swagger-resources/**, /api-docs/**
 
