--- a/booking-be/user-service/userservice/src/main/resources/application.properties
+++ b/booking-be/user-service/userservice/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.springframework.validation=DEBUG
 
 spring.datasource.url=jdbc:mysql://localhost:3306/booking
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
