--- a/booking-be/hotel-service/hotelservice/pom.xml
+++ b/booking-be/hotel-service/hotelservice/pom.xml
@@ -50,6 +50,12 @@
 			<version>2.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.33.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.mysql</groupId>
