[+] authorize with RBAC (jwt)

--- a/booking-be/auth-service/authservice/src/main/resources/application.properties
+++ b/booking-be/auth-service/authservice/src/main/resources/application.properties
@@ -9,3 +9,5 @@ user.service.url=http://localhost:8080/api/v1/user
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 
+JWT_SECRET=18601da4-a73a-4492-88df-207c0df19544
+
