--- a/booking-be/apigateway/src/main/resources/application.properties
+++ b/booking-be/apigateway/src/main/resources/application.properties
@@ -14,9 +14,9 @@ springdoc.swagger-ui.urls[2].url=/docs/hotelservice/v3/api-docs
 
 security.excluded.urls= /swagger-ui.html, /swagger-ui/**, /docs/**, /v3/api-docs/**, /swagger-resources/**, /api-docs/**
 
-#Keycloak
-#keycloak.auth.jwk-set-uri= http://localhost:8091/realms/ticketing-security-realm/protocol/openid-connect/certs
-#spring.security.oauth2.resourceserver.jwt,issuer-uri=http://localhost:8091/realms/ticketing-security-realm
+Keycloak
+keycloak.auth.jwk-set-uri= http://localhost:8091/realms/ticketing-security-realm/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt,issuer-uri=http://localhost:8091/realms/ticketing-security-realm
 
 
 # Actuator
@@ -39,3 +39,6 @@ resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpe
 resilience4j.timelimiter.configs.default.timeout-duration=3s
 resilience4j.retry.configs.default.max-attempts=3
 resilience4j.retry.configs.default.wait-duration=2s
+
+JWT_SECRET=18601da4-a73a-4492-88df-207c0df19544
+
